feat: remove articles fixe, and change coming soon

--- a/data/projects.json
+++ b/data/projects.json
@@ -7,21 +7,21 @@
     "link": "https://github.com/htostes/quick-llm-extension"
   },
   {
-    "title": "Coming Soon",
+    "title": "Free Ebook of Open Source Tools",
     "description": "Coming soon...",
     "logo": "",
     "tags": ["Coming", "soon"],
     "link": ""
   },
   {
-    "title": "Coming Soon",
+    "title": "Host your VPS Toolkit",
     "description": "Coming soon...",
     "logo": "",
     "tags": ["Coming", "soon"],
     "link": ""
   },
   {
-    "title": "Coming Soon",
+    "title": "Pinterest Scrapper Tool",
     "description": "Coming soon...",
     "logo": "",
     "tags": ["Coming", "soon"],
